@@ -1,5 +1,6 @@
 
 5.2a1 -> 5.2a2:
+    - jbj: fire file trigger patterns symmetrically.
     - jbj: fire trigger patterns against filepaths. still asymmetric, todo++.
     - proyvind: perl: add icon() & icon_url() to RPM::Spec.
     - bero: Python 2.6 support in configure.ac
